// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`provides raw tree data 1`] = `
{
  "tree": {
    "children": {
      "test": {
        "constructInfo": {
          "fqn": "constructs.Construct",
          "version": "10.3.0",
        },
        "display": {
          "description": "A cloud unit test.",
          "hidden": true,
          "title": "Test",
        },
        "id": "test",
        "path": "root/test",
      },
    },
    "constructInfo": {
      "fqn": "constructs.Construct",
      "version": "10.3.0",
    },
    "id": "root",
    "path": "root",
  },
  "version": "tree-0.1",
}
`;

exports[`run all tests > single test 1`] = `
[
  {
    "error": undefined,
    "pass": true,
    "path": "root/test",
    "traces": [
      {
        "data": {
          "message": "hi",
        },
        "sourcePath": "root/test/Handler",
        "sourceType": "@winglang/sdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "log",
      },
      {
        "data": {
          "message": "Invoke (payload=undefined).",
          "status": "success",
        },
        "sourcePath": "root/test/Handler",
        "sourceType": "@winglang/sdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
    ],
  },
]
`;

exports[`run single test > happy path 1`] = `
{
  "error": undefined,
  "pass": true,
  "path": "root/test",
  "traces": [
    {
      "data": {
        "message": "hi",
      },
      "sourcePath": "root/test/Handler",
      "sourceType": "@winglang/sdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    {
      "data": {
        "message": "Invoke (payload=undefined).",
        "status": "success",
      },
      "sourcePath": "root/test/Handler",
      "sourceType": "@winglang/sdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;

exports[`run single test > test failure 1`] = `
{
  "error": "Error: test failed
    at Handler.handle ([abs])
    at Object.exports.handler ([abs])
    at [abs]
    at Script.runInContext (node:vm:<sanitized>)
    at Object.runInContext (node:vm:<sanitized>)
    at [src]/shared/sandbox.ts:<sanitized>
    at new Promise (<anonymous>)
    at Sandbox.call ([src]/shared/sandbox.ts:<sanitized>)
    at Object.withTrace ([src]/simulator/simulator.ts:<sanitized>)
    at TestRunner.runTest ([src]/target-sim/test-runner.inflight.ts:<sanitized>)",
  "pass": false,
  "path": "root/test",
  "traces": [
    {
      "data": {
        "message": "I am about to fail",
      },
      "sourcePath": "root/test/Handler",
      "sourceType": "@winglang/sdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    {
      "data": {
        "error": {},
        "message": "Invoke (payload=undefined).",
        "status": "failure",
      },
      "sourcePath": "root/test/Handler",
      "sourceType": "@winglang/sdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;
